--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,7 @@
-<h1>Hello World!</h1>
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<body>
+  <h1>Hello World?</h1>
+  <script src="bundle.js"></script>
+</body>
+</html>
